# pam-param

./: .gitmodules  CMakeLists.txt  COPYING  authtest.c  escape.c  pam-param.c  pam-param.h  pam-param.spec  pam_param.c  pam_param.h  pam_param.spec  test.c
doc/: pam_param.8
man/: CMakeLists.txt  pam_param.8
samples/: pam-param-test.pamd  pam-param.ini  pam_param.ini
